# Space_Invaders

./: .gitignore  CMakeLists.txt  README.md
headers/: Enemy2.h  Enemy3.h  Entity.h  Game.h  Interface.h  Obstacle.h  Player.h
resources/texts/: scoreTable.txt
spaceInvaders/: spaceInvaders.sln
spaceInvaders/spaceInvaders/: Bullet.cpp  Bullet.h  ClassDiagram.cd  Enemy.cpp  Enemy.h  Enemy1.cpp  Enemy2.cpp  Enemy3.cpp  EnemyManager.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  Game.h  Interface.cpp  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  UFO.cpp  functions.cpp  main.cpp  spaceInvaders.vcxproj  spaceInvaders.vcxproj.filters
spaceInvaders/spaceInvaders/Headers/: Enemy.h  Enemy1.h  Enemy2.h  Enemy3.h  EnemyManager.h  Entity.h  EntityManager.h  Game.h  Global.h  Interface.h  Obstacle.h  Player.h  UFO.h  functions.h  structs.h
spaceInvaders/spaceInvaders/PlayerData/: name.txt
spaceInvaders/spaceInvaders/Resources/Texts/: Instruction.txt  scoreTable.txt
src/: Enemy.cpp  Enemy1.cpp  Enemy2.cpp  Enemy3.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  Interface.cpp  Obstacle.cpp  Player.cpp  UFO.cpp  main.cpp
